tests/NormalTests/paczka1/small_fuzzy/30335218.err
Error in line 4: KJF4 A11 56,2
Error in line 5: KJF4 S140 34,3
Error in line 2: oFzM A29 62,3
